# AndroidRemoteDebug_TargetApp

./: .gitignore  README.md  xmake.lua
src/android/: build.gradle  settings.gradle
src/android/app/: .gitignore  build.gradle
src/android/app/jni/: CMakeLists.txt  byopen_android.c  config_jdwp.cpp  config_jdwp.h  prefix.h
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/java/singleheaven/remotedebug/android/: AppMain.java  JdwpJni.java  LoggerImpl.java  MainActivity.java
src/android/app/src/main/java/singleheaven/remotedebug/android/service/: JdwpService.java
src/android/app/src/main/res/layout/: activity_main.xml
src/android/app/src/main/res/values/: strings.xml
